tests/ui/self/arbitrary_self_types_raw_pointer_trait.stderr
error[E0307]: invalid `self` parameter type: *const i32
  --> $DIR/arbitrary_self_types_raw_pointer_trait.rs:17:18
   |
LL |     fn foo(self: *const Self) -> &'static str {
   |                  ^^^^^^^^^^^
   |
   = note: type of `self` must be `Self` or some type implementing Receiver
   = help: consider changing to `self`, `&self`, `&mut self`, or a type implementing `Receiver`: for example `self: Box<Self>`, `self: Rc<Self>`, `self: Arc<Self>`, or `self: Pin<P>` (where P is one of the previous types except `Self`). Raw pointers do not implement Receiver. Consider wrapping your pointer in a newtype wrapper for which you implement Receiver.

error[E0307]: invalid `self` parameter type: *const i32
  --> $DIR/arbitrary_self_types_raw_pointer_trait.rs:22:25
   |
LL |     unsafe fn bar(self: *const Self) -> i64 {
   |                         ^^^^^^^^^^^
   |
   = note: type of `self` must be `Self` or some type implementing Receiver
   = help: consider changing to `self`, `&self`, `&mut self`, or a type implementing `Receiver`: for example `self: Box<Self>`, `self: Rc<Self>`, `self: Arc<Self>`, or `self: Pin<P>` (where P is one of the previous types except `Self`). Raw pointers do not implement Receiver. Consider wrapping your pointer in a newtype wrapper for which you implement Receiver.

error[E0307]: invalid `self` parameter type: *const u32
  --> $DIR/arbitrary_self_types_raw_pointer_trait.rs:29:18
   |
LL |     fn foo(self: *const Self) -> &'static str {
   |                  ^^^^^^^^^^^
   |
   = note: type of `self` must be `Self` or some type implementing Receiver
   = help: consider changing to `self`, `&self`, `&mut self`, or a type implementing `Receiver`: for example `self: Box<Self>`, `self: Rc<Self>`, `self: Arc<Self>`, or `self: Pin<P>` (where P is one of the previous types except `Self`). Raw pointers do not implement Receiver. Consider wrapping your pointer in a newtype wrapper for which you implement Receiver.

error[E0307]: invalid `self` parameter type: *const u32
  --> $DIR/arbitrary_self_types_raw_pointer_trait.rs:34:25
   |
LL |     unsafe fn bar(self: *const Self) -> i64 {
   |                         ^^^^^^^^^^^
   |
   = note: type of `self` must be `Self` or some type implementing Receiver
   = help: consider changing to `self`, `&self`, `&mut self`, or a type implementing `Receiver`: for example `self: Box<Self>`, `self: Rc<Self>`, `self: Arc<Self>`, or `self: Pin<P>` (where P is one of the previous types except `Self`). Raw pointers do not implement Receiver. Consider wrapping your pointer in a newtype wrapper for which you implement Receiver.

error[E0307]: invalid `self` parameter type: *const Self
  --> $DIR/arbitrary_self_types_raw_pointer_trait.rs:4:18
   |
LL |     fn foo(self: *const Self) -> &'static str;
   |                  ^^^^^^^^^^^
   |
   = note: type of `self` must be `Self` or some type implementing Receiver
   = help: consider changing to `self`, `&self`, `&mut self`, or a type implementing `Receiver`: for example `self: Box<Self>`, `self: Rc<Self>`, `self: Arc<Self>`, or `self: Pin<P>` (where P is one of the previous types except `Self`). Raw pointers do not implement Receiver. Consider wrapping your pointer in a newtype wrapper for which you implement Receiver.

error[E0307]: invalid `self` parameter type: *const Self
  --> $DIR/arbitrary_self_types_raw_pointer_trait.rs:7:25
   |
LL |     unsafe fn bar(self: *const Self) -> i64;
   |                         ^^^^^^^^^^^
   |
   = note: type of `self` must be `Self` or some type implementing Receiver
   = help: consider changing to `self`, `&self`, `&mut self`, or a type implementing `Receiver`: for example `self: Box<Self>`, `self: Rc<Self>`, `self: Arc<Self>`, or `self: Pin<P>` (where P is one of the previous types except `Self`). Raw pointers do not implement Receiver. Consider wrapping your pointer in a newtype wrapper for which you implement Receiver.

error[E0307]: invalid `self` parameter type: *const *const Self
  --> $DIR/arbitrary_self_types_raw_pointer_trait.rs:10:33
   |
LL |     unsafe fn complicated(self: *const *const Self) -> i64 where Self: Sized {
   |                                 ^^^^^^^^^^^^^^^^^^
   |
   = note: type of `self` must be `Self` or some type implementing Receiver
   = help: consider changing to `self`, `&self`, `&mut self`, or a type implementing `Receiver`: for example `self: Box<Self>`, `self: Rc<Self>`, `self: Arc<Self>`, or `self: Pin<P>` (where P is one of the previous types except `Self`). Raw pointers do not implement Receiver. Consider wrapping your pointer in a newtype wrapper for which you implement Receiver.

error: aborting due to 7 previous errors

For more information about this error, try `rustc --explain E0307`.
